crates/macro/ui-tests/traits-not-implemented.stderr
error[E0277]: the trait bound `A: IntoWasmAbi` is not satisfied
 --> $DIR/traits-not-implemented.rs:5:1
  |
5 | #[wasm_bindgen]
  | ^^^^^^^^^^^^^^^ the trait `IntoWasmAbi` is not implemented for `A`
  |
 ::: $WORKSPACE/src/convert/traits.rs
  |
  | pub trait IntoWasmAbi: WasmDescribe {
  | ----------------------------------- required by this bound in `IntoWasmAbi`
  |
  = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
